--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
 
   cd:
     runs-on: ubuntu-latest
+    needs: [ci]
     steps:
       - name: Authenticate on AWS
         run: echo "Running the aws configure"
