--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,15 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - name: Authenticate on Docker Hub
-        run: echo "Running the Docker Login"
+      - name: Get project code
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Docker Image Build
         run: echo "Running the Docker build"
       - name: Docker Image Upload
