--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker Image Build
-        run: echo "Running the Docker build"
-      - name: Docker Image Upload
-        run: echo "Running the Docker push"
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./src
+          push: true
+          file: ./src/Dockerfile
+          tags: |
+            mateuskywalker90/fake-shop:latest
+            mateuskywalker90/fake-shop:v${{ github.run_number }}
 
   cd:
     runs-on: ubuntu-latest
