--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ci]
     steps:
-      - name: Authenticate on AWS
-        run: echo "Running the aws configure"
+      - name: Get project code
+        uses: actions/checkout@v4
+      
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Configure the kubectl
         run: echo "Running the aws eks update-kubeconfig"
       - name: Deploying kubernetes manifest
