--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,10 @@ jobs:
   cd:
     runs-on: ubuntu-latest
     needs: [ci]
+    permissions:
+      id-token: write
+      contents: read
+      actions: read
     steps:
       - name: Get project code
         uses: actions/checkout@v4
@@ -42,7 +46,13 @@ jobs:
           aws-region: us-east-1
 
       - name: Configure the kubectl
-        run: echo "Running the aws eks update-kubeconfig"
+        run: aws eks update-kubeconfig --name skw-k8s
+
       - name: Deploying kubernetes manifest
-        run: echo "Running the kebectl apply"
+        uses: Azure/k8s-deploy@v5
+        with:
+           manifests: |
+              ./k8s/deployment.yaml
+           images: |
+              mateuskywalker90/fake-shop:v${{ github.run_number }}
         
